mdapipkg/objects/Voucher__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Used__c</fullName>
        <label>Amount Used</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Amount__c  -  Amount_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vouchers</relationshipLabel>
        <relationshipName>Vouchers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Expired__c</fullName>
        <label>Date Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Issued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Used__c</fullName>
        <label>Date Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Extended_Reason__c</fullName>
        <inlineHelpText>Must have content if expiration date has been extended.</inlineHelpText>
        <label>Expiration Date Extended Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expired_date_in_past__c</fullName>
        <formula>If(Date_Expired__c &lt; Today(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired date in past?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Account_Number__c</fullName>
        <label>GL Account Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Sub_Account_Number__c</fullName>
        <label>GL Sub-Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Host_Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host Chapter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vouchers</relationshipLabel>
        <relationshipName>Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <label>Voucher Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Expiration_Date_Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expiration Date Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>as per Item-03446</description>
        <label>Is Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Generator__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Number Generator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <label>Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time use</fullName>
                </value>
                <value>
                    <fullName>Multiple use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Vouchers</relationshipLabel>
        <relationshipName>Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>NMV - New Member Voucher, FFV - Forum Fundamentals Voucher, FFVS - Forum Fundamentals Spouse/Partner Voucher</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FFV</fullName>
                </value>
                <value>
                    <fullName>FFVS</fullName>
                </value>
                <value>
                    <fullName>NMV</fullName>
                </value>
                <value>
                    <fullName>SEV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voucher_Invoice__c</fullName>
        <inlineHelpText>Finance chapter payment document number</inlineHelpText>
        <label>Voucher Invoice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Voucher</label>
    <listViews>
        <fullName>All_FFV_FFVS_Vouchers</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Used__c</columns>
        <columns>Date_Expired__c</columns>
        <columns>Amount__c</columns>
        <columns>Amount_Used__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>FFV,FFVS</value>
        </filters>
        <label>All FFV &amp; FFVS Vouchers</label>
    </listViews>
    <listViews>
        <fullName>All_SEV_Vouchers</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Used__c</columns>
        <columns>Date_Expired__c</columns>
        <columns>Amount__c</columns>
        <columns>Amount_Used__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>SEV</value>
        </filters>
        <label>All SEV Vouchers</label>
    </listViews>
    <listViews>
        <fullName>All_Vouchers</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Used__c</columns>
        <columns>Date_Expired__c</columns>
        <columns>Amount__c</columns>
        <columns>Amount_Used__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Vouchers</label>
    </listViews>
    <listViews>
        <fullName>Find_Voucher</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Used__c</columns>
        <columns>Date_Expired__c</columns>
        <columns>Amount__c</columns>
        <columns>Amount_Used__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Used,Available</value>
        </filters>
        <label>Find_Voucher</label>
    </listViews>
    <nameField>
        <displayFormat>VCH-{0000}</displayFormat>
        <label>Voucher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enforcing_Data_Entry_to_Expiration_Date</fullName>
        <active>false</active>
        <description>Enforce data entry into Expiration_Date_Extended_Reason__c if Is_Expiration_Date_Extended__c is true.</description>
        <errorConditionFormula>ISBLANK(Expiration_Date_Extended_Reason__c) &amp;&amp;  Is_Expiration_Date_Extended__c = True</errorConditionFormula>
        <errorMessage>Please fill the Expiration Date Extended Reason field.</errorMessage>
    </validationRules>
</CustomObject>